chore: a whole load of porting work